*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
@@ -45,15 +45,18 @@ the <b>c:\MySDK\workspace</b> directory we find subdirectories named after the w
 Content directories are created by the platform when the user creates a project.</P>
 <P >
 Inside each directory, we find the files and folders within the project, laid out exactly the same as they are in the workspace's resource tree.  All file names are the same, and the files' contents are the same
-whether accessed from the file system or from the workspace.  No surprises.</P>
+whether accessed from the file system or from the workspace. The only surprise
+is the <b>.project</b> file, explained in a moment.</P>
 <font color='#4444CC'><pre>
    C:\MySDK\workspace  (workspace root)
       .metadata\ (platform metadata directory
       MyWeb\ (project content directory for MyWeb)
+	 .project
          index.html
          images\
             logo.gif
       MyServlet\ (project content directory for MyServlet)
+	 .project
          src\
             main.java
          bin\
@@ -66,7 +69,11 @@ The platform has a special <b>.metadata</b> directory for holding platform inter
 is stored in the metadata portion of the workspace and should only be accessed by tools through the
 platform API.&nbsp; These files should never be edited or manipulated using
 generic file system API. </P>
-<P >Apart from the <b>.metadata</b> directory, the folders and files in the workspace directory are fair game for other
+<P >In addition, each project has its own <b>.project</b> file, where metadata
+about the project is kept.&nbsp; This file is basically an on-disk equivalent of
+the information found in a project's
+<b><a href="../reference/api/org/eclipse/core/resources/IProjectDescription.html">IProjectDescription</a></b>.&nbsp;&nbsp; </P>
+<P >Apart from the <b>.metadata</b>  directory and the <b>.project</b> files, the folders and files in the workspace directory are fair game for other
 tools.&nbsp; The files and folders can be manipulated by non-integrated tools, such as text editors and file system
 utilities.&nbsp; The only issue is that the user must be careful when editing
 these files both in the workbench and externally.&nbsp; (This is no
