*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources.htm
@@ -27,6 +27,12 @@ Repository resource management</H2>
 
 
 
+  <p>Finally, team providers can mark resources as being &quot;team
+  private.&quot;&nbsp; </p>
+
+
+
+
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
