Removed obsolete documentation

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -1,36 +1,57 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>JDT User interface</TITLE>
-
-<link rel="stylesheet" type="text/css" HREF="../book.css">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H2>JDT User interface</H2>
-<P>
-The <b> org.eclipse.jdt.ui</b> plug-in implements the Java specific user interface classes that manipulate Java elements. The following
-roadmap outlines the major functions in the
-<b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html"> org.eclipse.jdt.ui</a></b> package and its
-sub packages.</P>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+<head>
+ 
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+ 
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>JDT User interface</title>
+   
+  <link rel="stylesheet" type="text/css" href="../book.css">
+</head>
+ <body bgcolor="#ffffff">
+ 
+<h2>JDT User interface</h2>
+ 
+<p> The <b> org.eclipse.jdt.ui</b> plug-in implements the Java specific user
+interface classes that manipulate Java elements. The following roadmap outlines
+the major functions in the <b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html">
+ org.eclipse.jdt.ui</a>
+</b> package and its sub packages.</p>
+  
 <ul>
-  <li>A <b>Java perspective</b> assembles all of the Java specific UI elements.&nbsp;
-    Users working in the Java perspective use the customized Java views and editors and have access to all of the workbench actions associated with developing Java code.</li>
-  <li>The <b>Java package view </b>(<a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"><b>IPackagesViewPart</b></a><b><a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html">)</a>
-    </b> shows the package structure of the resources in the workspace and
-    includes menu items for Java specific actions.&nbsp; The Java
-    <b> type hierarchy view</b>
-(<a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a>) shows the hierarchy for a Java type in the workspace.&nbsp;</li>
-  <li>A specialized <b>Java editor</b> supports syntax coloring, annotating code with compilation problems, and code assist. A content outliner further decomposes the source file into its underlying elements.&nbsp;
-    A Java <b> .class</b> file editor is provided that uses a content outliner to decompose the binary file into its underlying elements.</li>
-  <li>Specialized <b> wizards</b> are implemented for creating different kinds of Java elements.&nbsp;
-    <b><a href="../reference/api/org/eclipse/jdt/ui/wizards/NewJavaProjectWizardPage.html">NewJavaProjectWizardPage</a></b> is a public wizard class that allows other plug-ins to include the
-    Java page when creating their own projects. This wizard page will configure a new project with the Java nature.</li>
+   <li>A <b>Java perspective</b> assembles all of the Java specific UI elements.&nbsp; 
+    Users working in the Java perspective use the customized Java views and
+editors and have access to all of the workbench actions associated with developing
+Java code.</li>
+   <li>The <b>Java package view </b>(<a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"><b>
+IPackagesViewPart</b></a>
+    <b><a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html">
+)</a>
+     </b> shows the package structure of the resources in the workspace and 
+    includes menu items for Java specific actions.&nbsp; The Java     <b>
+ type hierarchy view</b> (<a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>
+ITypeHierarchyViewPart</b></a>
+) shows the hierarchy for a Java type in the workspace.&nbsp;</li>
+   <li>A specialized <b>Java editor</b> supports syntax coloring, annotating
+code with compilation problems, code assist, and quick fix. A content outliner
+further decomposes the source file into its underlying elements.&nbsp;  
+  A Java <b> .class</b> file editor is provided that uses a content outliner
+to decompose the binary file into its underlying elements.</li>
+   <li>Specialized <b> wizards</b> are implemented for creating different
+kinds of Java elements.&nbsp;     <b><a href="../reference/api/org/eclipse/jdt/ui/wizards/NewJavaProjectWizardPage.html">
+NewJavaProjectWizardPage</a>
+    </b> is a public wizard page class that allows other plug-ins to include
+the     Java page when creating their own projects. This wizard page will
+configure a new project with the Java nature.</li>
+ 
 </ul>
-
-<P><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
-</BODY>
-</HTML>
+  
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12">
+</a>
+</p>
+ 
+</body>
+</html>
