Change "components" to "features"

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
@@ -13,7 +13,7 @@ The workbench aims to achieve seamless tool integration and controlled openness 
 
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-25.htm"><br>
-Components<br>
+Features<br>
 </a><a href="concepts-12.htm">Resources</a><a href="concepts-4.htm"><br>
 Perspectives</a><a href="concepts-5.htm"><br>
 Views<br>
@@ -22,7 +22,7 @@ Views<br>
 
 
 <P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-34.htm"><br>
-Installing components</a><a href="../tasks/tasks-9f.htm"><br>
+Installing features</a><a href="../tasks/tasks-9f.htm"><br>
 Opening perspectives<br>
 </a><a href="../tasks/tasks-3.htm">Opening views</a><br>
 <a href="../tasks/tasks-28.htm">Switching between perspectives</a><br>
@@ -33,7 +33,7 @@ Opening perspectives<br>
 Toolbar buttons</a></P>
 
 
-<P><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<P><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
 </P>
 
 
