--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -4,34 +4,38 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Components</title>
+<title>Features</title>
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head" dir="ltr">
-Components</H1>
+Features</H1>
 
 <p CLASS="Para">Independent Software Vendors (ISVs) add function to the
-workbench by delivering <i>components</i>, which are a mechanism for grouping plug-ins.  Components, and thus all of their plug-ins, can be installed and uninstalled.  Simple tools may consist of only one plug-in,
-while complex tools may require many.</p>
-<p CLASS="Para">The <b>Update Manager</b> item on the <b>Help</b> menu provides
-information about installed components.
+workbench by delivering <i>features</i>, which are a mechanism for grouping plug-ins.  Features, and thus all of their plug-ins, 
+can be installed and uninstalled.  Simple tools may consist of only one plug-in,
+while complex tools may require many.
+</p>
+
+<p CLASS="Para">The <b>About</b> item on the <b>Help</b> menu provides information about installed features and plug-ins. 
+The <b>Software Updates</b> submenu on the <b>Help</b> menu groups together items for updating existing features, and 
+for finding, downloading, and installing new features.
+</p>
 
 
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-25.htm"><br>
-Components<br>
-</a><a href="concepts-2.htm"> Workbench</a></P>
+<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br></br>
+<a href="concepts-2.htm">Workbench</a></P>
 
 
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-34.htm"><br>
-Installing components<br>
-</a><a href="../tasks/tasks-33.htm">Managing components</a><a href="../tasks/tasks-35.htm"><br>
-Removing components</a><a href="../tasks/tasks-36.htm"><br>
-Updating components</a><a href="../tasks/tasks-37.htm"><br>
-Reverting to previously installed components<br>
-</a><a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a></P>
+<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br></br>
+<a href="../tasks/tasks-34.htm">Installing features</a><br></br>
+<a href="../tasks/tasks-33.htm">Managing features</a><br></br>
+<a href="../tasks/tasks-35.htm">Removing features</a><br></br>
+<a href="../tasks/tasks-36.htm">Updating features</a><br></br>
+<a href="../tasks/tasks-37.htm">Reverting to previously installed features</a><br></br>
+<a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a><br></br>
+</P>
 
-
-<P><img src ="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<P><img src ="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
 </P>
 
 
